--- a/src/app.scss
+++ b/src/app.scss
@@ -1,20 +1,6 @@
-.app{
-    height: 100vh;
-
-    .sections{
-        width: 100%;
-        height: calc(100vh - 70px);
-        background-color: lightsalmon;
-        position: relative;
-        top: 70px;
-        scroll-behavior: smooth;
-        scrollbar-width: none; //for firefox
-        &::-webkit-scrollbar{
-            display: none;
-        }   
-        > *{
-            width: 100vw;
-            height: calc(100vh - 70px);
-        }
-    }
-}   
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
